[gd_scene load_steps=4 format=3 uid="uid://cspyht3ytgvhx"]

[ext_resource type="Script" path="res://ui/options.gd" id="1_sxokr"]

[sub_resource type="ImageTexture" id="ImageTexture_lgjsh"]

[sub_resource type="Theme" id="Theme_42qfs"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxokr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = -160.0
offset_right = 337.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
dragger_visibility = 2

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/Panel/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
dragger_visibility = 2

[node name="Volume2" type="Label" parent="Panel/Panel/VBoxContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Gesamtlautstärke"

[node name="Volume" type="HSlider" parent="Panel/Panel/VBoxContainer/HSplitContainer/VSplitContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Verschiebe um die Gesamtlautstärke anzupassen"
value = 100.0

[node name="Mute" type="CheckButton" parent="Panel/Panel/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Stummstellen des Spiels"
theme_override_font_sizes/font_size = 30
text = "Mute"

[node name="HSeparator" type="HSeparator" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer2" type="HSplitContainer" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
dragger_visibility = 2

[node name="Resulutions" type="OptionButton" parent="Panel/Panel/VBoxContainer/HSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Bildschirmauflösung anpassen"
theme_override_font_sizes/font_size = 30
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Fullscreen" type="CheckButton" parent="Panel/Panel/VBoxContainer/HSplitContainer2"]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Vollbild an/ausschalten"
theme_override_font_sizes/font_size = 30
text = "Vollbild"

[node name="HSeparator2" type="HSeparator" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer3" type="HSplitContainer" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Close_Btn" type="Button" parent="Panel/Panel/VBoxContainer/HSplitContainer3"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Schließt die Einstellungen"
theme_override_font_sizes/font_size = 30
text = "Zurück"
icon = SubResource("ImageTexture_lgjsh")

[node name="Reset_Btn" type="Button" parent="Panel/Panel/VBoxContainer/HSplitContainer3"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Setzt die Einstellungen zurück auf den Standart"
theme = SubResource("Theme_42qfs")
theme_override_font_sizes/font_size = 30
text = "Werkseinstellungen"

[connection signal="value_changed" from="Panel/Panel/VBoxContainer/HSplitContainer/VSplitContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Panel/Panel/VBoxContainer/HSplitContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="Panel/Panel/VBoxContainer/HSplitContainer2/Resulutions" to="." method="_on_resulutions_item_selected"]
[connection signal="toggled" from="Panel/Panel/VBoxContainer/HSplitContainer2/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Panel/Panel/VBoxContainer/HSplitContainer3/Close_Btn" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="Panel/Panel/VBoxContainer/HSplitContainer3/Reset_Btn" to="." method="_on_reset_btn_pressed"]
